--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
-    <script src="todo.js"></script>
-    <link rel="stylesheet" href="todo.css">
+    <script src="js/todo.js"></script>
+    <link rel="stylesheet" href="css/todo.css">
   </head>
   <body>
     <h2>Todo</h2>
